terraform/baleados_hard.tf
resource "aws_security_group" "sg_baleado" {
  name        = "sg-baleado"
  description = "Security Group totalmente aberto"

  ingress {
    description = "ssh liberado geral"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP liberado geral"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
